@@ -4857,7 +4857,7 @@ var EQDATA = {
 		LOS: 4,
 	},
 	389: {
-		name: 'TBM-3W+3S',
+		name: 'TBM-3W + 3S',
 		nameJP: 'TBM-3W+3S',
 		added: '2020-08-27',
 		type: TORPBOMBER,
@@ -5031,6 +5031,30 @@ var EQDATA = {
 		ACC: 2,
 		ASW: 5,
 		LOS: 5,
+	},
+	405: {
+		name: 'Do 217 E-5 + Hs293 Initial Model',
+		nameJP: 'Do 217 E-5+Hs293初期型',
+		added: '2021-01-29',
+		type: LANDBOMBER,
+		aaResistShip: .6,
+		DIVEBOMB: 22,
+		TP: 13,
+		AA: 4,
+		ACC: 2,
+		LOS: 3,
+	},
+	406: {
+		name: 'Do 217 K-2 + Fritz-X',
+		nameJP: 'Do 217 K-2+Fritz-X',
+		added: '2021-01-29',
+		type: LANDBOMBER,
+		aaResistShip: .6,
+		DIVEBOMB: 24,
+		TP: 16,
+		AA: 4,
+		ACC: 2,
+		LOS: 3,
 	},
 	501: {
 		name: '5inch Single Cannon',
